--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,10 @@
 {
   "scripts": {
-    "start": "npx ts-node src/app.ts"
+    "dev:server": "nodemon --watch './**/*' -e ts,js,css --exec 'ts-node -r tsconfig-paths/register' src/app.ts"
   },
-  "moduleSearchPaths": [
-    "endpoints"
-  ],
   "dependencies": {
     "express": "^4.17.3",
+    "mongoose": "^6.2.6",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
@@ -15,6 +13,8 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@types/express": "^4.17.13",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "nodemon": "^2.0.15",
+    "tsconfig-paths": "^3.13.0"
   }
 }
