--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,8 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "esModuleInterop": true,
+    "paths": {
+      "*": ["src/*"]
+    }
   },
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", ".vscode"]
 }
