--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "mongoose": "^6.2.6",
+    "passport-local": "^1.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
