--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   api:
     build: api
     working_dir: /api/
-    command: "npm run start"
+    command: "npm run dev:server"
     ports:
       - '3030:3030'
     depends_on:
