--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.6",
+    "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "ts-node": "^10.7.0",
