--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,15 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.29.4",
     "nodemon": "^2.0.15",
     "tsconfig-paths": "^3.13.0"
   }
