kinda fix docker

--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "express-ws": "^5.0.2",
     "mongoose": "^6.2.6",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
